# stare-decisis

./: .gitignore  ARCHITECTURE.md  ARCHIVE.md  CHANGELOG.md  CONSTITUTION.md  DECISIONS.md  LICENSE  NOTICE  PROTOCOL.md  README.md  THIRD-PARTY.md  WSL2-SETUP.md  give-claude.md
docs/: 00-INDEX.md  01-OVERVIEW.md  02-CONCEPTS.md  03-DIRECTORY.md  05-PYTHON.md  06-HOOKS.md  07-STATE.md  08-BUILD-SCOPE.md  09-CLAUDE-PROMPTS.md  10-VALIDATION.md  11-RISKS.md  12-DEPLOYMENT.md  DAY-1-HEALTH-REPORT.md
docs/04-CRATES/: 00-overview.md  01-myth-common.md  02-myth-db.md  03-myth-gavel.md  04-myth-identity.md  05-myth-hooks.md  06-myth-embed.md  07-myth-orchestrator.md  08-myth-runtime.md  09-myth-ui.md  10-myth-cli.md
python/: pyproject.toml
python/myth_py/: __init__.py
python/myth_py/assessor/: __init__.py  classifier.py  cli.py  dispatcher.py  remand_feedback.py  schema.py  templates.py
python/myth_py/observer/: __init__.py  analyzer.py  brief_gen.py  cli.py  lapse.py  migration.py
python/tests/assessor/: test_classifier.py  test_dispatcher.py  test_schema.py  test_templates.py
python/tests/observer/: test_analyzer.py  test_brief_gen.py  test_lapse.py  test_migration.py
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/crates/myth-cli/: Cargo.toml
rust/crates/myth-cli/src/: args.rs  lib.rs  main.rs  output.rs
rust/crates/myth-cli/src/subcmd/: constitution.rs  doctor.rs  embed.rs  gavel.rs  init.rs  install.rs  key.rs  lesson.rs  link.rs  mod.rs  observer.rs  run.rs  status.rs  watch.rs
rust/crates/myth-cli/tests/: link_integration_test.rs
rust/crates/myth-common/: Cargo.toml
rust/crates/myth-common/src/: error.rs  ids.rs  lib.rs  logging.rs  paths.rs  time.rs  types.rs
rust/crates/myth-common/tests/: error_test.rs  paths_test.rs  types_test.rs
rust/crates/myth-db/: Cargo.toml
rust/crates/myth-db/migrations/: 001_initial.sql
rust/crates/myth-db/src/: appeal.rs  events.rs  jsonl.rs  lesson.rs  lib.rs
rust/crates/myth-db/src/audit/: entry.rs  hasher.rs  mod.rs
rust/crates/myth-db/src/sqlite/: migration.rs  mod.rs  pool.rs  pragmas.rs
rust/crates/myth-db/tests/: audit_chain_test.rs  jsonl_concurrent_test.rs  lesson_crud_test.rs  migration_test.rs  sqlite_test.rs
rust/crates/myth-embed/: Cargo.toml
rust/crates/myth-embed/src/: cli.rs  client.rs  lib.rs  lock.rs  main.rs  spawn.rs
rust/crates/myth-embed/src/daemon/: idle.rs  mod.rs  model.rs  server.rs  stats.rs
rust/crates/myth-embed/src/protocol/: mod.rs  types.rs  wire.rs
rust/crates/myth-embed/tests/: concurrent_clients.rs  daemon_lifecycle.rs  daemon_smoke_test.rs  flock_race.rs  protocol_roundtrip.rs
rust/crates/myth-gavel/: Cargo.toml
rust/crates/myth-gavel/src/: fatigue.rs  judge.rs  lib.rs  tool_input.rs  verdict.rs
rust/crates/myth-gavel/src/grid/: default.rs  mod.rs  overrides.rs
rust/crates/myth-gavel/src/rules/: bedrock.rs  compile.rs  foundation.rs  mod.rs  surface.rs
rust/crates/myth-gavel/tests/: fatigue_test.rs  fixture_harness_test.rs  grid_test.rs  judge_test.rs  rule_loading_test.rs  template_sanity_test.rs  verdict_test.rs
rust/crates/myth-hooks/: Cargo.toml
rust/crates/myth-hooks/src/: lib.rs  records.rs  remand.rs  tier0.rs  tier3_dispatch.rs
rust/crates/myth-hooks/src/core/: input.rs  latency.rs  mod.rs  output.rs  runner.rs  session.rs
rust/crates/myth-hooks/src/templates/: mod.rs  variant_b.rs
rust/crates/myth-hooks/tests/: input_test.rs  latency_test.rs  output_test.rs  post_tool_test.rs  records_test.rs  subprocess_test.rs  tier0_test.rs  variant_b_test.rs  wire_through_test.rs
rust/crates/myth-hooks/tests/fixtures/envelopes/: post_tool_use.json  post_tool_use_failure.json  pre_tool_use.json  session_start.json  stop.json  user_prompt_submit.json
rust/crates/myth-identity/: Cargo.toml
rust/crates/myth-identity/src/: lapse.rs  lib.rs  matcher.rs
rust/crates/myth-identity/src/store/: in_memory.rs  mod.rs  sqlite_vec.rs  usearch.rs
rust/crates/myth-identity/src/tier1/: mod.rs  normalize.rs
rust/crates/myth-identity/src/tier2/: embed_client.rs  mod.rs
rust/crates/myth-identity/src/tier3/: mod.rs
rust/crates/myth-identity/tests/: in_memory_store_test.rs  lapse_test.rs  normalize_test.rs  tier1_test.rs
rust/crates/myth-orchestrator/: Cargo.toml
rust/crates/myth-orchestrator/scripts/: execute.sh  plan.sh  report.sh  review.sh  router.sh  state.sh  ui.sh  watchdog.sh  worktree.sh
rust/crates/myth-orchestrator/src/: executor.rs  lib.rs  plan.rs  report.rs  squad.rs  tmux.rs  watchdog.rs  worktree.rs
rust/crates/myth-runtime/: Cargo.toml
rust/crates/myth-runtime/src/: discovery.rs  env.rs  fallback.rs  io.rs  lib.rs  session.rs  version.rs
rust/crates/myth-ui/: Cargo.toml
rust/crates/myth-ui/src/: app.rs  events.rs  layout.rs  lib.rs  markdown.rs  syntax.rs  theme.rs
rust/crates/myth-ui/src/panels/: brief.rs  caselog.rs  lessons.rs  migration.rs  mod.rs  tasks.rs
scripts/: bench-hooks.sh  e2e-wave8.sh  install.sh  install_myth_to_project.sh  license-audit.sh  migrate_key.sh  pgo-build.sh  uninstall.sh
templates/: bedrock-rules.yaml  foundation-rules.yaml  grid.yaml
templates/.claude/agents/: assessor.md  observer.md
templates/commons/: seed-lessons.yaml
tests/fixtures/negative/: R1-A.yaml  R1-B.yaml  R1-C.yaml  R1-D.yaml  R1-E.yaml  R1-F.yaml  R1-G.yaml  R2-A.yaml  R2-B.yaml  R2-C.yaml  R2-D.yaml  R3-A.yaml  R3-B.yaml  R3-C.yaml  R3-D.yaml
tests/fixtures/positive/: R1-A.yaml  R1-B.yaml  R1-C.yaml  R1-D.yaml  R1-E.yaml  R1-F.yaml  R1-G.yaml  R2-A.yaml  R2-B.yaml  R2-C.yaml  R2-D.yaml  R3-A.yaml  R3-B.yaml  R3-C.yaml  R3-D.yaml
