[project]
name = "myth_py"
version = "0.1.0"
description = "myth Python layer (Assessor, Observer)"
authors = [{ name = "Jeffrey" }]
license = { text = "MIT OR Apache-2.0" }
readme = { text = "Python layer of myth — see ~/myth/docs/05-PYTHON.md", content-type = "text/plain" }
requires-python = ">=3.11"

dependencies = [
    "anthropic>=0.42,<0.43",        # Milestone A 이후 Tier 3 활성
    "pydantic>=2.7,<3",
    "typer>=0.12,<0.13",
    "click>=8.1,<8.2",               # Wave 6 drift 7: typer 0.12 호환 범위 고정 (click 8.2+는 Parameter.make_metavar 시그니처 변경으로 typer 0.12 깨짐)
    "pyyaml>=6.0,<7",
    "rich>=13.7,<14",                # 터미널 출력
    "python-dateutil>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<0.24",
    "mypy>=1.10,<2",
    "ruff>=0.5,<1",
]

[project.scripts]
myth-assessor = "myth_py.assessor.cli:app"
myth-observer = "myth_py.observer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["myth_py"]
