[workspace]
resolver = "2"
members = [
    "crates/myth-common",
    "crates/myth-db",
    "crates/myth-gavel",
    "crates/myth-identity",
    "crates/myth-hooks",
    "crates/myth-embed",
    "crates/myth-orchestrator",
    "crates/myth-runtime",
    "crates/myth-ui",
    "crates/myth-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Di-Vernon/myth"  # placeholder
authors = ["Jeffrey"]

[workspace.dependencies]
# (04-CRATES/00-overview.md §4에 정의된 전체 목록)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled", "modern_sqlite"] }
regex = "1"
regex-automata = "0.4"
sha1 = "0.10"
blake3 = "1"
bincode = "1"
tokio = { version = "1", default-features = false, features = ["rt", "io-util", "net", "time", "macros", "sync", "process", "fs"] }
mimalloc = { version = "0.1", default-features = false }
memmap2 = "0.9"
simsimd = "4"
fastembed = "5"
# ort: transitive via fastembed (see docs/04-CRATES/06-myth-embed.md change box 2026-04-19)
ratatui = "0.26"
crossterm = "0.27"
syntect = "5"
pulldown-cmark = "0.10"
clap = { version = "4", features = ["derive"] }

# Filesystem / XDG
dirs = "5"
libc = "0.2"
fs2 = "0.4"

# Unix (setsid, flock for embed daemon)
nix = { version = "0.28", features = ["fs"] }

# Dev-only
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = 0
overflow-checks = false
incremental = false
