[package]
name = "myth-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
myth-common = { path = "../myth-common" }
myth-db = { path = "../myth-db" }
myth-embed = { path = "../myth-embed" }
myth-gavel = { path = "../myth-gavel" }
myth-identity = { path = "../myth-identity" }
myth-orchestrator = { path = "../myth-orchestrator" }
myth-runtime = { path = "../myth-runtime" }
myth-ui = { path = "../myth-ui" }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
mimalloc = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "myth"
path = "src/main.rs"
