[package]
name = "myth-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
myth-common = { path = "../myth-common" }
myth-db = { path = "../myth-db" }
myth-gavel = { path = "../myth-gavel" }
myth-identity = { path = "../myth-identity" }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
mimalloc = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

# Task 3.2 — simple 3 bins (session-start, user-prompt, stop).
[[bin]]
name = "myth-hook-session-start"
path = "src/bin/session_start.rs"

[[bin]]
name = "myth-hook-user-prompt"
path = "src/bin/user_prompt.rs"

[[bin]]
name = "myth-hook-stop"
path = "src/bin/stop.rs"

# Task 3.3 — post-tool.
[[bin]]
name = "myth-hook-post-tool"
path = "src/bin/post_tool.rs"

# [[bin]] targets for pre-tool / post-tool-failure land in Tasks 3.4..3.5.
