[package]
name = "myth-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
myth-common = { path = "../myth-common" }
myth-db = { path = "../myth-db" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
which = "6"

[dev-dependencies]
tempfile = { workspace = true }
